maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:55: error: not found: value leftRunnerMode
  leftRunnerMode();
  ^